<resources>
    <string name="app_name">TimedLists</string>

    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="run">Run</string>
    <string name="run_multi">Multi</string>
    <string name="run_continue">CLICK TO CONTINUE</string>
    <string name="stop">STOP TIMER</string>
    <string name="note_title">Notes of %1s</string>
    <string name="click_to_add">Click to add item</string>
    <string name="notes">Notes</string>
    <string name="main_title">TIMEDLISTS</string>
    <string name="add_date">Add Date</string>
    <string name="date_format">\n&lt;++&gt; %1$s, %2$s:\n</string>
    <string name="stopwatch_stop">Click to stop\n%1$s</string>
    <string name="stopwatch_save">Save time</string>
    <string name="stopwatch_discard">Discard</string>
    <string name="total_time">Total Time Left:\n%1$s\nNot Timed Items:\n%2$s</string>
    <string name="total_time_done">Run for:\n%1$s</string>
    <string name="highlight_repeat">%1$s %2$d/%3$d\n</string>
    <string name="copy">Copy</string>
    <string name="link">Link</string>
    <string name="New">New</string>

    <string name="copy_text">Listen!\nIt looks like there is at least one items with a similar names.
        \nWhat do you want to do?
        \n\n\t&#8212; New : Create a new item with the name %1$s.
        \n\n\t&#8212; Copy : Create a new item with the parameters of %2$s.
        \n\n\t&#8212; Link : Links to the item %2$s. Changing the parameters changes them for all instances.</string>
</resources>
