<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stopwatch_buttons"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/stopwatch_stop"
        android:background="@android:color/holo_orange_light"
        android:layout_width="match_parent"
        android:text="@string/stopwatch_stop"
        android:onClick="stopwatchStop"
        android:visibility="gone"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:id="@+id/stopwatch_save"
            android:background="@android:color/holo_orange_light"
            android:text="@string/stopwatch_save"
            android:layout_width="0dp"
            android:onClick="stopwatchSave"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/stopwatch_discard"
            android:background="@android:color/holo_orange_light"
            android:text="@string/stopwatch_discard"
            android:onClick="stopwatchDiscard"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>



</RelativeLayout>