<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:padding="@dimen/border_size">

    <TextView
        android:id="@+id/popup_copy_text"
        android:padding="@dimen/border_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ListView
        android:id="@+id/copy_listview"
        android:layout_above="@+id/popup_copy_buttons"
        android:layout_below="@+id/popup_copy_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/popup_copy_buttons"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Button
            android:id="@+id/popup_new"
            android:onClick="newItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/New" />

        <Button
            android:id="@+id/popup_copy"
            android:onClick="copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy" />

        <Button
            android:id="@+id/popup_link"
            android:onClick="link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/link" />
    </LinearLayout>
</RelativeLayout>